# texworks

./: .gitattributes  .gitignore  CMakeLists.txt  GitArchiveInfo.txt  PACKAGING  README.md  TeXworks-dev.ini  TeXworks.ini  TwxDoxydocLib.cmake
CMake/Base/Test/: CMakeLists.txt  TwxArgTest.cmake  TwxAssertTest.cmake  TwxBaseTest.cmake  TwxCfg_inner.ini(busy)  TwxCfg_outer.ini(busy)  TwxCfg_read.ini(busy)  TwxCfg_write.ini(busy)  TwxCoreTest.cmake  TwxExpectTest.cmake  TwxExportTest.cmake  TwxFatalTest.cmake  TwxGlobalTest.cmake  TwxIncrementTest.cmake  TwxMathTest.cmake  TwxMessageTest.cmake  TwxPOCTest.cmake  TwxSplitTest.cmake  TwxTreeTest.cmake  TwxUtilTest.cmake
Package/: CMakeLists.txt  CPackProjectConfig.txt  README.md
Package/Test/: README.md
Package/Test/src/: TwxPackageTest.cpp  TwxPackageTest.h  main.cpp
Package/mac/: DMGSetup.in.scpt  MacPackagingTasks.in.cmake
Package/os_darwin/: CPackPackagingTasks.in.cmake  DMGSetup.in.scpt
modules/: CMakeLists.txt  README.md
modules/QtPDF/: CMakeLists.txt
modules/QtPDF/src/: PDFDocumentView.cpp  PDFDocumentView.h  PDFDocumentWidget.h  PDFSearcher.h
modules/QtPDF/trans/: QtPDF_trans.pro
modules/QtPDF/unit-tests/: TestQtPDF.cpp
modules/TwxCore/: CMakeLists.txt  Readme.md
modules/TwxCore/Test/: CMakeLists.txt  TestSetup.cmake  TwxCoreLibTest.cpp  TwxCoreTest.cpp  TwxCoreTest.h  TwxCoreTest.ini  TwxCoreTest_macOS.h
modules/TwxCore/src/: Setup.cmake  TwxAssets.cpp  TwxAssets.h  TwxAssets.in.h  TwxAssetsTrackDB.cpp  TwxAssetsTrackDB.h  TwxAssetsTrackDB.in.h  TwxAssetsTrackDB_private.h  TwxAssets_private.h  TwxConst.h  TwxConst.in.cpp  TwxInfo.h  TwxInfo.in.cpp  TwxInfo.in.h  TwxInfoMacOSVersion.mm  TwxLocate.in.cpp  TwxLocate.in.h  TwxLocate_private.h  TwxSettings.cpp  TwxSettings.h  TwxSettings.in.h  TwxSetup.cpp  TwxSetup.h  TwxTool.cpp  TwxTool.h
modules/TwxEngine/Test/: TwxCoreLibTest.cpp
modules/TwxHelp/: CMakeLists.txt  README.md
modules/TwxHelp/CMake/: TwxHelpCommand.cmake  TwxHelpLib.cmake
modules/TwxHelp/Test/: CMakeLists.txt  TwxHelpTest.cpp  TwxHelpTest.h  TwxTypesetTest.cpp
modules/TwxHelp/src/: Setup.cmake  TwxHelpManager.cpp  TwxHelpManager.in.h  TwxHelpManager_private.h
modules/TwxTypeset/: CMakeLists.txt
modules/TwxUtil/: CMakeLists.txt
modules/TwxUtil(archive)/: Readme.md
modules/TwxUtil/Test/: main.cpp  (+9 more)
modules/TwxW3/: CMakeLists.txt
modules/anchor/: CMakeLists.txt
modules/include/: README.md
modules/synctex/: synctex_parser.c  synctex_parser.h  synctex_parser_advanced.h
plugins-src/TwxLuaPlugin/: CMakeLists.txt
plugins-src/TwxPythonPlugin/: CMakeLists.txt
res/: CMakeLists.txt  TeXworks.in.plist  TeXworks.in.rc  resources.qrc
res/macOS/: TeXworks.in.plist
res/os-win/: TeXworks.in.rc
res/os-windows/: TeXworks.in.rc
res/os_darwin/: README.md  TeXworks-dev.icns  TeXworks-dev.in.plist  TeXworks.in.plist
res/os_other/: README.md  texworks-dev.in.1  texworks-dev.in.appdata.xml  texworks-dev.in.desktop  texworks.in.1  texworks.in.appdata.xml
res/os_windows/: README.md  TeXworks-dev.in.rc  TeXworks.in.exe.manifest
res/unixOS/: texworks.in.1  texworks.in.appdata.xml  texworks.in.desktop
res/winOS/: TeXworks.in.exe.manifest  TeXworks.in.rc
src/: CMakeLists.txt  CompletingEdit.cpp  CompletingEdit.h  Engine.cpp  Engine.h  FindDialog.cpp  FindDialog.h  HardWrapDialog.cpp  InterProcessCommunicatorWin.cpp  PDFDocumentWindow.cpp  PDFDocumentWindow.h  PrefsDialog.cpp  PrefsDialog.h  ResourcesDialog.cpp  ScriptManagerWidget.cpp  SearchResults.ui  Settings.cpp  Settings.h  Setup.cmake  String.cpp  String.h  TWApp.cpp  TWApp.h  TWIcon.cpp  TWIcon.h  TWScriptManager.cpp  TWScriptableWindow.cpp  TWString.cpp  TWString.h  TWTextEdit.cpp  TWTextEdit.h  TWTextEdit.ui  TWUtils.cpp  TeXDocks copy.h  TeXDocks.cpp  TeXDocks.h  TeXDocumentWindow.cpp  TeXDocumentWindow.h  TeXDocumentWindow.ui  TeXHighlighter.cpp  (+2 more)
src/Core/: CMakeLists.txt  Readme.md  Setup.cmake  SetupPathManager.cmake  TwxAssets.cpp  TwxAssets.h  TwxAssetsLookup.h  TwxAssetsLookup.in.cpp  TwxAssetsLookupPrivate.h  TwxAssetsPrivate.h  TwxAssetsTrackDB.cpp  TwxAssetsTrackDB.h  TwxAssetsTrackDBPrivate.h  TwxConst.cpp  TwxConst.h  TwxConst.in.cpp  TwxFileRecordDB.cpp  TwxFileRecordDB.h  TwxFileRecordDBPrivate.h  TwxInfo.cpp  TwxInfo.h  TwxInfo.in.cpp  TwxLocate.h  TwxLocate.in.cpp  TwxPathManager.cpp  TwxPathManager.h  TwxPathManager.in.cpp  TwxPathManagerPrivate.h  TwxResourcesManager.cpp  TwxResourcesManager.h  TwxResourcesManagerPrivate.h  TwxSettings.cpp  TwxSettings.h  TwxSetup.cpp  TwxSetup.h  TwxSetupIni.cpp  TwxSetupManager.cpp  TwxSetupManager.h  TwxTool.cpp  TwxTool.h
src/Git/: GitRev.in.h  Setup.cmake  Tool.cmake  TwxGitRev.h  TwxGitRev.in.cpp
src/IPC/: InterProcessCommunicatorMacOS.cpp  InterProcessCommunicatorUnixOS.cpp  InterProcessCommunicatorWinOS.cpp
src/Test/: CMakeLists.txt
src/Typeset/: CmakeLists.txt  Setup.cmake  TwxEngine.cpp  TwxEngine.h  TwxEngineManager.cpp  TwxEngineManager.h  TwxEngineManagerPrivate.h  TwxEnginePrivate.h  TwxTypesetManager.cpp  TwxTypesetManager.h  TwxTypesetManagerPrivate.h
src/Version/: Setup.cmake  TwxVersion.h  TwxVersion.in.cpp
src/anchor/: TWDockTree.cpp  TWDockTree.h  TWParser.cpp  TWParser.h  TWTag.cpp  TWTag.h
src/document/: SpellChecker.cpp  TWFileExtent.cpp  TWFileExtent.h  TWSpellChecker.cpp  TWSpellChecker.h  TWTag.cpp  TWTag.h  TWTeXDockTree.cpp  TWTeXDockTree.h  Tag.cpp  Tag.h  TeXDocument.cpp  TextDocument.cpp  TextDocument.h
src/scripting/: JSScript.cpp  ScriptAPI.cpp  ScriptAPI.h  ScriptAPIInterface.h
src/ui/: CMakeLists.txt  Setup.cmake
src/utils/: ResourcesLibrary.cpp  ResourcesLibrary.h  WindowManager.cpp  WindowManager.h
unit-tests/: BibTeXFile_test.cpp  CMakeLists.txt  DocumentX_test.cpp  DocumentX_test.h  Document_test.cpp  Document_test.h  LuaScripting_test.cpp  UI_test.cpp  Utils_test.cpp  Utils_test.h
unit-tests/Document/: TWTag_test.cpp
unit-tests/anchor/: TWParser_test.cpp  TWParser_test.h  TWTag_test.cpp  TWTag_test.h
unit-tests/document/: TWSpellChecker_test.cpp  TWSpellChecker_test.h  TWTag_test.cpp  TWTag_test.h
(+372 files in other folders)
